tests/fixtures/positive/style/ExplicitItLambdaMultipleParameters.kt
package style

fun example() {
    val list = listOf("a", "b", "c")
    list.mapIndexed { index, it -> println(it.length) }
}
